# falcon-air

./: Cargo.toml  README.md
src/: big_air.rs  debug.rs  lib.rs  main.rs  relation_tracker.rs
src/big_air/: claim.rs  interaction_claim.rs  macros.rs  mod.rs  relation.rs  relation_macro.rs
src/debug/: mod.rs  relation_tracker.rs
src/ntt/: mod.rs  twiddles.rs
src/ntts/: merge.rs  mod.rs  mul.rs  ntt.rs  roots.rs  split.rs  test.rs
src/ntts/intt/: ibutterfly.rs  mod.rs  split.rs
src/ntts/ntt/: butterfly.rs  merge.rs  mod.rs
src/ntts/roots/: inv_preprocessed.rs  mod.rs  preprocessed.rs
src/poly/: euclidean_norm.rs  mul.rs  sub.rs
src/polys/: add.rs  euclidean_norm.rs  mod.rs  mul.rs  sub.rs
src/traits/: components.rs  mod.rs  preprocessed.rs
src/utils/: hot_selector.rs  mod.rs
src/zq/: add.rs  inverses.rs  mod.rs  mul.rs  range_check.rs  sub.rs
